--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@zerodevx/svelte-toast": "^0.9.5",
     "ismobilejs": "^1.1.1",
     "konva": "^9.2.3",
-    "svelte-konva": "^0.3.1"
+    "svelte-konva": "^0.3.1",
+    "svelte-toast": "^1.0.0"
   }
 }
