--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite --open",
     "build": "vite build && cp dist/index.html dist/404-error.html",
     "preview": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json"
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "deploy": "git push prod master"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
