--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ismobilejs": "^1.1.1",
     "konva": "^9.2.3",
     "svelte-konva": "^0.3.1",
-    "svelte-toast": "^1.0.0"
+    "svelte-tippy": "^1.3.2",
+    "tippy.js": "^6.3.7"
   }
 }
